# MandelbrotCompute

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
source/: CMakeLists.txt  Colour.h  main.cpp
source/Mandelbrot/: Mandelbrot.cpp  Mandelbrot.h
source/Renderer/: Renderer.cpp  Renderer.h
